' Generated by UML Generator
' Encoded: pLXjRzis4FxkNo7aapl7oR2sms1qGPNOImquZM4d28PXC6Y9jhbHaaVIxhAk-UqxKgBCDydPIxTz2P3ZtNDtpzsH9x_b0Z6nosY7_qpoBM8eYnAAE8-5O6Iv4tYS5FcS_8QZBpiRak8e8IoXkDDHMj4CenIpw6CdYfveiUOJacC-YAuAId4YI96_cGDElhw8lero_26A6KEF4yB5culk2sa4BZbE9s1gMKsbc3LPzVlmfrVwLeBU6ejfZTHz4SBgVD91IvquH_IHLw7tFm8DWYIV8aeo8WOHoGMuVbcxgiypHF8kOZBQCh4VVWHd-uAa1_YRWelHhrkSSxB7KrQakqICyo4IQ8auTXpUpoOQ2ZoU_9Gkay4M0DOCyr_euFoS5WcY6v0CNhzw-TNvCBwB5vVnVBI8f-CJ6se-cfbOeB28XpVZzxRQD9xF7svdGrDrlIBYSRNO5pkwUFNwcwzF_CnN94-3cQKEtPC2oksPLjfJHX9y-GX6Msq-Y2XO04PQx9RGMS0ZMdB1K2BALepA0fPDTaSoF1Ses-hmfH0AEi5xJ4sPCdsFCcmAComsHUfALTjZWHatfJlmAQE3NgZPA2FfGgVBHjVQgWC9dsEsX-ma7SkYe1ZbLMVMCSkZsa6FcoV2pKktLGcXC_GGwWFgS63RNsasF833YSUO3N5JS-TX64S-mpRAjERQGp6E_8hOAFUgDXAXh4vF5AMQ0LhFupL0byrs-KXIevdwHWzMLGuLFMGVR85rhMZ5nasnxV98LhoM6N4PDcrPnwcUENdTcLddTli32z2rzVZv962OU8RaRCCTPbagUaAEckW9PQYkXAuLX97YCGe0T6J5vxMLSnpEnaOCDhaIvisDpQhPhtayrfJnPB8DLwYX2qC6VuRflznBGqnX61lQYRHFJuDjKznkpF0_-UopShzDqNFoEpevAkC6jB-RyR_Gb990Y7j5ABORKRxfwYhOurp0dQnsCKXj9FzltDAGMWYkYfsokK7RQXayZSQvmEl3VlSEyOqyDhSx8vQoeiCo3B_1g-3KLQ3YKq8hmkeuDWAIIaP8EYAfYT9KcNLLkj912MDmkzCrLl51PGVLbk9jWzfO4TgJppntrfTUvUOWq2rNWxmZwusYGxRK72EMR71QUR_6kRpG2kFkg4xibTeWz48rSv4jCRjTIJctP_PPxhg6fqP7fv7lfggWWb7DQHFsNS4oHClbtcp69mQYie9sj063-WwGg-LfX8R3nNHsExo_kbEcfz5wTBU0wrHBvvLuDuNzUkJefgF9o1DAW4gokFn-8Rlpa9gOrQ7gsNRIqmp3U0O7ZbO3P-WPTP1b0IwvBN48yLsuh52giMPOOrMJuq1V-5DNHTXhYL2g-J5A66N4lUl9N_tBL5efYftYIjbrgBpouDuli1GF_H9h6B_83i__avRpA-E_YDM7bl506EJPhv1vuEPYGxXSspZUQP06vsstA77UUFiim9wDPLVMndBE0gJxcLe5y5ErZnigvjvupenutoQwqyFhXcFjVbYVHlPgtRmPk9ylogrpRpqm8fnh-OCKDT_BbiL_FIGFXrYzYxb-GChVAPhULdxioJlojhQwwJxB0pogo_QN5CumMw44HsCxXQVcTrTnyzdJR_FoJsLV_IXPzFlLKjO9_WJGx_z-eHM2NykcGjFtcgdJz9bawZHzQbWwnXekaz0hf7LmTbRhFsyxF3i33uTsUAQLz6-uxOIsCnMxzHXs6hUSBm3FtGb2Lqi0itr0tVJQjTsqMflVXMvLTf7VuZpTPVGF
' URL: http://www.plantuml.com/plantuml/uml/pLXjRzis4FxkNo7aapl7oR2sms1qGPNOImquZM4d28PXC6Y9jhbHaaVIxhAk-UqxKgBCDydPIxTz2P3ZtNDtpzsH9x_b0Z6nosY7_qpoBM8eYnAAE8-5O6Iv4tYS5FcS_8QZBpiRak8e8IoXkDDHMj4CenIpw6CdYfveiUOJacC-YAuAId4YI96_cGDElhw8lero_26A6KEF4yB5culk2sa4BZbE9s1gMKsbc3LPzVlmfrVwLeBU6ejfZTHz4SBgVD91IvquH_IHLw7tFm8DWYIV8aeo8WOHoGMuVbcxgiypHF8kOZBQCh4VVWHd-uAa1_YRWelHhrkSSxB7KrQakqICyo4IQ8auTXpUpoOQ2ZoU_9Gkay4M0DOCyr_euFoS5WcY6v0CNhzw-TNvCBwB5vVnVBI8f-CJ6se-cfbOeB28XpVZzxRQD9xF7svdGrDrlIBYSRNO5pkwUFNwcwzF_CnN94-3cQKEtPC2oksPLjfJHX9y-GX6Msq-Y2XO04PQx9RGMS0ZMdB1K2BALepA0fPDTaSoF1Ses-hmfH0AEi5xJ4sPCdsFCcmAComsHUfALTjZWHatfJlmAQE3NgZPA2FfGgVBHjVQgWC9dsEsX-ma7SkYe1ZbLMVMCSkZsa6FcoV2pKktLGcXC_GGwWFgS63RNsasF833YSUO3N5JS-TX64S-mpRAjERQGp6E_8hOAFUgDXAXh4vF5AMQ0LhFupL0byrs-KXIevdwHWzMLGuLFMGVR85rhMZ5nasnxV98LhoM6N4PDcrPnwcUENdTcLddTli32z2rzVZv962OU8RaRCCTPbagUaAEckW9PQYkXAuLX97YCGe0T6J5vxMLSnpEnaOCDhaIvisDpQhPhtayrfJnPB8DLwYX2qC6VuRflznBGqnX61lQYRHFJuDjKznkpF0_-UopShzDqNFoEpevAkC6jB-RyR_Gb990Y7j5ABORKRxfwYhOurp0dQnsCKXj9FzltDAGMWYkYfsokK7RQXayZSQvmEl3VlSEyOqyDhSx8vQoeiCo3B_1g-3KLQ3YKq8hmkeuDWAIIaP8EYAfYT9KcNLLkj912MDmkzCrLl51PGVLbk9jWzfO4TgJppntrfTUvUOWq2rNWxmZwusYGxRK72EMR71QUR_6kRpG2kFkg4xibTeWz48rSv4jCRjTIJctP_PPxhg6fqP7fv7lfggWWb7DQHFsNS4oHClbtcp69mQYie9sj063-WwGg-LfX8R3nNHsExo_kbEcfz5wTBU0wrHBvvLuDuNzUkJefgF9o1DAW4gokFn-8Rlpa9gOrQ7gsNRIqmp3U0O7ZbO3P-WPTP1b0IwvBN48yLsuh52giMPOOrMJuq1V-5DNHTXhYL2g-J5A66N4lUl9N_tBL5efYftYIjbrgBpouDuli1GF_H9h6B_83i__avRpA-E_YDM7bl506EJPhv1vuEPYGxXSspZUQP06vsstA77UUFiim9wDPLVMndBE0gJxcLe5y5ErZnigvjvupenutoQwqyFhXcFjVbYVHlPgtRmPk9ylogrpRpqm8fnh-OCKDT_BbiL_FIGFXrYzYxb-GChVAPhULdxioJlojhQwwJxB0pogo_QN5CumMw44HsCxXQVcTrTnyzdJR_FoJsLV_IXPzFlLKjO9_WJGx_z-eHM2NykcGjFtcgdJz9bawZHzQbWwnXekaz0hf7LmTbRhFsyxF3i33uTsUAQLz6-uxOIsCnMxzHXs6hUSBm3FtGb2Lqi0itr0tVJQjTsqMflVXMvLTf7VuZpTPVGF
' Generated on: 2025-12-03T21:07:35.402993660

@startuml hhj
skinparam classAttributeIconSize 0
hide circle

class Reader {
  ~logsLines: Collection<String> = new ArrayList<>()
  ~parsedLogs: Collection<Parser> = new ArrayList<>()
  --
  +Reader()
  +getParsedLogs(): Collection<Parser>
}

class LogsAnalyser {
  -{static} limit: int = 3
  --
  +{static} main(args: String[]): void
}

class MostExpensiveProductInDatabase {
  -{static} URL: String = "jdbc:postgresql://localhost:5432/DATA_BASE_API"
  -{static} USER: String = "API_ADMIN"
  -{static} PASSWORD: String = "gfityf_voul_4586"
  --
  +{static} findMostExpensiveProductId(): Collection<Long>
  +{static} findProductPriceById(productId: long): double
}

abstract class Parser {
  ~TimeStamp: String
  ~LogLevel: String
  ~className: String
  ~methodName: String
  ~parameters: String
  ~userId: int
  --
  +Parser(logLine: String)
  +isService(): boolean
  +getTimeStamp(): String
  +setTimeStamp(timeStamp: String): void
  +getLogLevel(): String
  +setLogLevel(logLevel: String): void
  +getClassName(): String
  +setClassName(className: String): void
  +getMethodName(): String
  +setMethodName(methodName: String): void
  +getParameters(): String
  +setParameters(parameters: String): void
  +getUserId(): int
  +toString(): String
}

class GetProductByidParser {
  -productId: int
  -userId: int
  --
  +GetProductByidParser(logLine: String)
  +getProductId(): int
  +setProductId(productId: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class AddProductLogsParser {
  -name: String
  -price: double
  -userId: int
  -experationDate: String
  --
  +AddProductLogsParser(logLine: String)
  +getUserId(): int
  +setPrice(price: double): void
  +setUserId(userId: int): void
  +getExperationDate(): String
  +setExperationDate(experationDate: String): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): double
  +toString(): String
}

class GetALLproductLogsParser {
  -userId: int
  --
  +GetALLproductLogsParser(logLine: String)
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class DeleteProductLogsParser {
  -id: int
  -userId: int
  --
  +DeleteProductLogsParser(logLine: String)
  +getId(): int
  +setId(id: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class UpdateProductLogsParser {
  -id: int
  -name: String
  -price: double
  --
  +UpdateProductLogsParser(logLine: String)
  +getId(): int
  +setId(id: int): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): double
  +toString(): String
}

class UserProfile {
  -userId: Long
  -events: List<LogEvent> = new ArrayList<>()
  -actionCounts: Map<String, Integer> = new HashMap<>()
  --
  +UserProfile(userID: Long)
  +getUserId(): Long
  +getEvents(): List<LogEvent>
  +getActionCounts(): Map<String,Integer>
  +addEvent(event: LogEvent): void
  +updateProfile(log: Parser): void
}

class LogEvent {
  +timestamp: String
  +event: String
  +id: int
}

class HigherProductSearchedProfileGenerator {
  -userProfiles: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +HigherProductSearchedProfileGenerator(userProfile: Collection<UserProfile>, nomberOfUsers: int)
  +generate(): void
}

class FormalReaderProfile {
  ~readAction: int
  --
  +FormalReaderProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getReadAction(): int
}

class FormalHigherPriceProfile {
  -userId: long
  -HigherPriceSearchedProducts: searchedProduct
  --
  +FormalHigherPriceProfile(userId: long, allProductsResearched: List<searchedProduct>)
  +getUserId(): long
  +HigherPriceSearchedProducts(): searchedProduct
  +getHighestPrice(): double
}

abstract class FormalProfile {
  -userId: long
  -ADD_PRODUCT: int
  -GET_ALL_PRODUCTS: int
  -UPDATE_PRODUCT: int
  -DELETE_PRODUCT: int
  -GET_PRODUCT_BY_ID: int
  --
  +FormalProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getUserId(): long
  +setUserId(userId: long): void
  +getADD_PRODUCT(): int
  +setADD_PRODUCT(aDD_PRODUCT: int): void
  +getGET_ALL_PRODUCTS(): int
  +setGET_ALL_PRODUCTS(gET_ALL_PRODUCTS: int): void
  +getUPDATE_PRODUCT(): int
  +setUPDATE_PRODUCT(uPDATE_PRODUCT: int): void
  +getDELETE_PRODUCT(): int
  +setDELETE_PRODUCT(dELETE_PRODUCT: int): void
  +getGET_PRODUCT_BY_ID(): int
  +setGET_PRODUCT_BY_ID(gET_PRODUCT_BY_ID: int): void
}

class searchedProduct {
  -productId: long
  -price: double
  --
  +searchedProduct(productId: long, price: double)
  +getPrice(): double
  +getProductId(): long
}

class FormalWriterProfile {
  ~writeAction: int
  --
  +FormalWriterProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getWriteAction(): int
}

class ReaderProductProfileGenerator {
  -usersProfile: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +ReaderProductProfileGenerator(usersProfile: Collection<UserProfile>, nb: int)
  +generate(): void
}

interface IGenerator {
  ~generate(): void
}

class WriteProductProfileGenerator {
  -usersProfile: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +WriteProductProfileGenerator(usersProfile: Collection<UserProfile>, nb: int)
  +generate(): void
}

Reader o-- Parser
GetProductByidParser --|> Parser
AddProductLogsParser --|> Parser
GetALLproductLogsParser --|> Parser
DeleteProductLogsParser --|> Parser
UpdateProductLogsParser --|> Parser
UserProfile o-- LogEvent
UserProfile ..> Parser
HigherProductSearchedProfileGenerator ..|> IGenerator
HigherProductSearchedProfileGenerator o-- UserProfile
FormalReaderProfile --|> FormalProfile
FormalHigherPriceProfile *-- searchedProduct
FormalWriterProfile --|> FormalProfile
ReaderProductProfileGenerator ..|> IGenerator
ReaderProductProfileGenerator o-- UserProfile
WriteProductProfileGenerator ..|> IGenerator
WriteProductProfileGenerator o-- UserProfile
@enduml